# PhysicalBasedRenderer

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  conanfile.txt  vcpkg_packages.py
cmake/macros/: FindExternalLibraries.cmake
engine/core/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Glfw.cpp  Glfw.h  GlfwApplication.cpp  GlfwApplication.h  PathUtils.cpp  PathUtils.h  StopWatch.h  Window.cpp  Window.h
engine/input/: CMakeLists.txt  Input.cpp  Input.h  InputChannels.h  InputDevice.cpp  InputDevice.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Mouse.cpp  Mouse.h
engine/physics/: CMakeLists.txt  Engine.cpp  Engine.h
engine/rendering/: Backend.cpp  Backend.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Format.cpp  Format.h  FrameBuffer.h  GLObject.cpp  GLObject.h  GLUtils.cpp  GLUtils.h  Layout.cpp  Layout.h  Material.h  Model.cpp  Model.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Skybox.h  Texture.cpp  Texture.h
engine/ui/: CMakeLists.txt
engine/ui/imgui/: Imgui.cpp  Imgui.h
examples/: Camera.cpp  Camera.h  DebugDraw.cpp  DebugDraw.h  DebugUI.cpp  DebugUI.h  Demo.cpp  Demo.h  Entity.h  Helper.cpp  Helper.h  main.cpp
resources/shaders/: SharedPBR.glsl  debug.vs  egui.fs  egui.vs  pbr.fs  pbr.vs  phong.fs  skybox.fs
src/: app.rs  app_old.rs  clock.rs  file_watcher.rs  libs.rs  main.rs  math.rs  ui.rs
src/math/: constants.rs  mat3.rs  mat4.rs  mod.rs  ops.rs  point3.rs  quat.rs  shared.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs  vector.rs
src/render/: backend.rs  buffer.rs  egui_painter.rs  framebuffer.rs  gl_utils.rs  gltf.rs  material.rs  mod.rs  model.rs  resource.rs  shader.rs  shader_constants.rs  skybox.rs  stream.rs  texture.rs
src/render/shaders/: pbr.vs
