[package]
name = "physical_based_renderer"
version="0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "1.3.2" }
lazy_static = "1.4.0"
gl = "0.14.0"
gltf = "0.15"
gl33 = "0.2.1"
glutin = "0.26.0"
#ash = "0.32.1"
#winit = "0.25.0"
egui = "0.15.0"
image = "0.19.0"
[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[profile.dev]
incremental = true