[package]
name = "physical_based_renderer"
version="0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "1.3.2" }
lazy_static = "1.4.0"
gl = "0.14.0"
gltf = "0.15"
egui = "0.15.0"
image = "0.19.0"
rspirv = "0.7"
rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f98cbfb5c7ee3aa1347158670a9b8ec5bf5" }

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[profile.dev]
incremental = true