[package]
name = "physical_based_renderer"
version="0.1.0"
edition = "2021"
#build = "build.rs"

[dependencies]
bitflags = { version = "1.3.2" }
lazy_static = "1.4.0"
gl = "0.14.0"
gltf = "1.0.0"
egui = "0.18.1"
image = "0.19.0"
rspirv = "0.7"
ahash = "0.7.6"
glfw = "0.45.0"
exr = "1.4.2"
radiant = "0.3.0"

rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f98cbfb5c7ee3aa1347158670a9b8ec5bf5" }
iml = { git = "https://github.com/danteruiz/IML", rev = "b8e73c0b7bed547475ab6b7c6dd0d9d3ade912f0"}

[profile.dev]
incremental = true